<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:text="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:orientation="horizontal"
            android:padding="4dp">

            <EditText
                android:id="@+id/first_name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/first_name"
                android:maxLength="12"
                android:inputType="textPersonName|textCapWords"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:orientation="horizontal"
            android:padding="4dp">

            <EditText
                android:id="@+id/last_name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/last_name"
                android:maxLength="15"
                android:inputType="textPersonName|textCapWords"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:orientation="horizontal"
            android:paddingBottom="8dp"
            android:paddingEnd="4dp"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:paddingStart="4dp"
            android:paddingTop="8dp">

            <Switch
                android:id="@+id/active_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/active"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:orientation="horizontal"
            android:padding="4dp"
            android:layout_marginLeft="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/date_of_birth"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

            <EditText
                android:id="@+id/date_edit_text"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:clickable="true"
                android:hint="@string/none_set"
                android:ems="10"/>

        </LinearLayout>

        <Button
            android:id="@+id/expand_contact_info"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_chevron_right"
            android:drawableRight="@drawable/ic_chevron_right"
            android:gravity="left|start"
            android:text="@string/contact_info"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

        <Button
            android:id="@+id/expand_diet_button"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_chevron_right"
            android:drawableRight="@drawable/ic_chevron_right"
            android:gravity="left|start"
            android:text="@string/diet"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

        <Button
            android:id="@+id/expand_sleep_button"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_chevron_right"
            android:drawableRight="@drawable/ic_chevron_right"
            android:gravity="left|start"
            android:text="@string/sleep_patterns"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

        <Button
            android:id="@+id/expand_exercise_button"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_chevron_right"
            android:drawableRight="@drawable/ic_chevron_right"
            android:gravity="left|start"
            android:text="@string/exercise"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

        <Button
            android:id="@+id/expand_substance_button"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_chevron_right"
            android:drawableRight="@drawable/ic_chevron_right"
            android:gravity="left|start"
            android:text="@string/substance_use"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

        <Button
            android:id="@+id/expand_other_button"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_chevron_right"
            android:drawableRight="@drawable/ic_chevron_right"
            android:gravity="left|start"
            android:text="@string/additional_info"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

        <Button
            android:id="@+id/expand_expectations_button"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_chevron_right"
            android:drawableRight="@drawable/ic_chevron_right"
            android:gravity="left|start"
            android:text="@string/expectations"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
    </LinearLayout>
</ScrollView>