<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:orientation="horizontal"
        android:paddingBottom="8dp"
        android:paddingEnd="4dp"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:paddingStart="4dp"
        android:paddingTop="8dp">

        <Button
            android:id="@+id/session_date_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/session_date"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/session_time_button"
            android:text="@string/select_time"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:orientation="horizontal"
        android:paddingBottom="8dp"
        android:paddingEnd="4dp"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:paddingStart="4dp"
        android:paddingTop="8dp">

        <Button
            android:id="@+id/save_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/save"/>

        <Button
            android:id="@+id/delete_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorRed"
            android:layout_weight="1"
            android:text="@string/delete"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:orientation="horizontal"
        android:paddingBottom="8dp"
        android:paddingEnd="4dp"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:paddingStart="4dp"
        android:paddingTop="8dp">

        <Switch
            android:id="@+id/paid_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:text="@string/paid_prompt"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:orientation="horizontal"
        android:paddingBottom="8dp"
        android:paddingEnd="4dp"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:paddingStart="4dp"
        android:paddingTop="8dp">
        <TextView
            android:id="@+id/session_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/session_notes"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:orientation="horizontal"
        android:paddingBottom="8dp"
        android:paddingEnd="4dp"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:paddingStart="4dp"
        android:paddingTop="8dp"
        android:background="@android:drawable/editbox_dropdown_light_frame">
        <EditText
            android:id="@+id/session_notes_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/session_notes_hint"
            android:inputType="textAutoComplete"
            android:maxLines = "200"
            android:scrollbars = "vertical"/>
    </LinearLayout>

</LinearLayout>